--- a/Dockerfile.scraper
+++ b/Dockerfile.scraper
@@ -12,6 +12,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    iputils-ping \
     cron \
     && rm -rf /var/lib/apt/lists/* 
 
